# i2cpy

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  build.bat  pyproject.toml  requirements-dev.txt  tox.bat  tox.ini
.github/workflows/: lint.yml  pylint.yml
board/: .gitignore
board/eeprom_board/: eeprom_board.kicad_pcb  eeprom_board.kicad_pro  eeprom_board.kicad_sch
board/eeprom_board/production/: netlist.ipc
docs/: requirements.txt
docs/source/: conf.py  index.rst
i2cpy/: __init__.py  errors.py
i2cpy/driver/: abc.py
i2cpy/driver/ch341/: __init__.py  constants.py  dll.py
i2cpy/driver/ch347/: __init__.py  constants.py  dll.py
tests/: test_i2c.py  test_utils.py
